@@ -1,4 +1,5 @@
 0.9.1
+   - bug [9468] "Har vi behov for equals metoden i Job?"
    - bug [9465] "Ny HarvesterIOException skal håndteres korrekt i testen af DatadockManagerTest.java"
    - bug [9453] "Documentation of parameters in config.txt"
    - bug [9449] "Timing on each plugin call and logging of the result"
